Fix: placeholder of search box was not aligned to left of the box

--- a/css/blog.css
+++ b/css/blog.css
@@ -233,6 +233,7 @@ input.gsc-input{
   margin: 0 !important;
   border-radius: 2px;
   background:white !important;
+  text-indent: 0px !important;
 }
 
 .gsc-input-box{
